# CrackTheCode_Organizer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
app/: Cargo.toml
app/migrations/2023-11-22-175238_create_users/: up.sql
app/migrations/2023-11-22-181854_create_puzzle/: down.sql  up.sql
app/migrations/2023-11-24-044116_create_puzzle_set/: down.sql  up.sql
app/migrations/2023-11-24-045115_create_puzzle_puzzle_set_ref/: down.sql  up.sql
app/migrations/2023-12-12-032415_create_teams/: down.sql  up.sql
app/migrations/2023-12-12-032428_create_user_teams_junction/: down.sql  up.sql
app/src/: main.rs  middleware.rs  test.rs
app/src/api/: mod.rs
app/src/api/v1/: auth.rs  mod.rs  models.rs  puzzle.rs
app/src/api/v1/admin/: mod.rs  routes.rs
app/src/api/v1/auth/: mod.rs  routes.rs  util.rs
app/src/api/v1/leaderboard/: mod.rs  routes.rs
app/src/api/v1/puzzles/: mod.rs  routes.rs
app/src/db/: leaderboard.rs  mod.rs  models.rs  schema.rs  users.rs
src/: app.rs  main.rs
web/: .editorconfig  angular.json  package-lock.json  package.json  tailwind.config.js
web/src/: styles.css
web/src/app/: admin-guard.guard.ts  api.service.ts  app.config.ts  app.routes.ts
web/src/app/admin/: admin.component.css  admin.component.html  admin.component.ts  admin.module.ts
web/src/app/admin/create-puzzle-set/: create-puzzle-set.component.css  (+2 more)
web/src/app/auth/: auth.component.css  auth.component.html  auth.component.ts
web/src/app/markdown-editor/: markdown-editor.component.html  markdown-editor.component.ts
(+15 files in other folders)
