[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = { version = "4.4.0" }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-identity = "0.6.0"
actix-ws = "0.2.5"
diesel = { version = "2.1.4", features = ["mysql", "extras"] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
env_logger = "0.10.1"
awc = { version = "3.2.0", features = ["openssl"] }
openssl = "0.10.61"
chrono = { version = "0.4.31", features = ["serde"] }
itertools = "0.12.0"
strum = "0.25.0"
rayon = "1.8.0"
dashmap = "5.5.3"
clap = { version = "4.4.11", features = ["derive", "env", "unicode"] }
rand = "0.8.5"
hsh = "0.0.7"
hex = "0.4.3"
config = "0.13.4"
